# PIGraph

./: .gitignore  a.out  fb_result  pigraph-conf.xml  pr_result.cpp  test.cpp  test.txt  transformation_giraph_data.cpp
Ethernet_IPoIB/PageRank/: CMakeLists.txt  main.cpp
Ethernet_IPoIB/SSSP/: CMakeLists.txt  main.cpp
Ethernet_IPoIB/WCC/: CMakeLists.txt  main.cpp
Ethernet_IPoIB/include/core/: Vertex.hpp
Ethernet_IPoIB/include/network/: tcp.hpp
Ethernet_IPoIB/include/query/: PageRank.hpp  SingleSourceShortestPath.hpp  WeaklyConnectedComponent.hpp
Ethernet_IPoIB/src/core/: CMakeLists.txt
Ethernet_IPoIB/src/network/: CMakeLists.txt  tcp.cpp
Ethernet_IPoIB/src/query/: CMakeLists.txt  PageRank.cpp  SingleSourceShortestPath.cpp  WeaklyConnectedComponent.cpp
Ethernet_IPoIB/src/tools/: CMakeLists.txt
IPoIB/: CMakeLists.txt  main.cpp
IPoIB/hostfile/: hostinfo.txt
IPoIB/include/core/: Vertex.hpp
IPoIB/networkTest/src/network/: CMakeLists.txt
IPoIB/rdmaTest/src/tools/: CMakeLists.txt
IPoIB/src/network/: tcp.cpp
IPoIB/src/query/: CMakeLists.txt  PageRank.cpp
Tools/AnalysisTools/: AnalysisTools.py  AnalysisTools_cpu.py  test_log_Synthesis_cpu_facebook_1  test_log_Synthesis_mem_facebook_1
Tools/GiraphData/: a.out  main.cpp  wiki
Tools/GirgaphData/: livejournal  main.cpp
Tools/networkTest/: CMakeLists.txt  main.cpp
Tools/networkTest/include/network/: tcp.hpp
Tools/networkTest/src/network/: CMakeLists.txt
Tools/rdmaTest/: main.cpp
assistTools/: convert.cpp  transformation_gemini.cpp  transformation_giraph_data.cpp  transformation_pregelplus_data.cpp
conf/: pigraph-conf.xml
exec/: build.sh  kcc.sh  nohup.out  test.sh  test_kcc.sh  tmp.sh
exec/Ethernet_IPoIB_PageRank/: CMakeCache.txt  Makefile  PiGraph_IPoIB_PageRank  cmake_install.cmake
exec/Ethernet_IPoIB_PageRank/core/: Makefile  cmake_install.cmake
exec/Ethernet_IPoIB_PageRank/network/: Makefile
exec/Ethernet_IPoIB_PageRank/query/: Makefile
exec/Ethernet_IPoIB_PageRank/tools/: Makefile
exec/Ethernet_IPoIB_SSSP/: CMakeCache.txt  Makefile  PiGraph_IPoIB_SSSP  cmake_install.cmake
exec/Ethernet_IPoIB_SSSP/core/: Makefile
exec/Ethernet_IPoIB_SSSP/network/: Makefile
exec/Ethernet_IPoIB_SSSP/query/: Makefile  cmake_install.cmake
exec/Ethernet_IPoIB_WCC/: CMakeCache.txt  Makefile  PiGraph_IPoIB_WCC  cmake_install.cmake
exec/RDMA_PageRank/: CMakeCache.txt  Makefile  PiGraph_RDMA_PageRank  cmake_install.cmake
exec/RDMA_SSSP/: CMakeCache.txt  Makefile  PiGraph_RDMA_SSSP  cmake_install.cmake
exec/RDMA_WCC/: CMakeCache.txt  Makefile  PiGraph_RDMA_WCC  cmake_install.cmake
exec/Result/: IPoIB_PageRank.txt  RDMA_PageRank.txt
exec/check_resource_execution_log/: Ethernet_PageRank_facebook.log_1  Ethernet_SSSP_facebook.log_1  Ethernet_WCC_facebook.log_1  IPoIB_PageRank_facebook.log_1  IPoIB_SSSP_facebook.log_1  IPoIB_WCC_facebook.log_1  RDMA_PageRank_facebook.log_1  RDMA_SSSP_facebook.log_1  RDMA_WCC_facebook.log_1
exec/execution_log/: Ethernet_PageRank_facebook.log_1  Ethernet_SSSP_facebook.log_1  Ethernet_WCC_facebook.log_1  IPoIB_PageRank_facebook.log_1  IPoIB_SSSP_facebook.log_1  IPoIB_WCC_facebook.log_1  RDMA_PageRank_facebook.log_1  RDMA_SSSP_facebook.log_1  RDMA_WCC_facebook.log_1
exec/hostfile/: hostinfo_ib.txt
exec/test_log/: Ethernet_PageRank_facebook.log_cpu_1  Ethernet_PageRank_facebook.log_mem_1  Ethernet_SSSP_facebook.log_cpu_1  Ethernet_SSSP_facebook.log_mem_1  Ethernet_WCC_facebook.log_cpu_1  Ethernet_WCC_facebook.log_mem_1  IPoIB_PageRank_facebook.log_cpu_1  IPoIB_PageRank_facebook.log_mem_1  IPoIB_SSSP_facebook.log_cpu_1  IPoIB_SSSP_facebook.log_mem_1  IPoIB_WCC_facebook.log_cpu_1  IPoIB_WCC_facebook.log_mem_1  RDMA_PageRank_facebook.log_cpu_1  RDMA_PageRank_facebook.log_mem_1  RDMA_SSSP_facebook.log_cpu_1  RDMA_SSSP_facebook.log_mem_1  RDMA_WCC_facebook.log_cpu_1  RDMA_WCC_facebook.log_mem_1
include/communication/: IPC.h  IPoIB.h  RDMA.h
include/io/: HDFS.h
include/modules/: Communication.h  Configuration.h  Coordination.h  Execution.h  Graph.h  IO.h  Network.h  Parsing.h  Processing.h  Propagation.h  Resourse.h  Setting.h
include/struct/: Vertex.h
include/utils/: ThreadPool.h  Tools.h
include/zk/: zkTools.h
include/zookeeper/: zkTools.h
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
module/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
module/lib/: Makefile
rdma/: CMakeLists.txt  main.cpp
rdma/PageRank/: CMakeLists.txt  main.cpp
rdma/Partitioning/: CMakeLists.txt  main.cpp
rdma/Partitioning/include/tools/: Parser.hpp
rdma/Partitioning/src/tools/: CMakeLists.txt
rdma/SSSP/: CMakeLists.txt  main.cpp
rdma/WCC/: CMakeLists.txt  main.cpp
rdma/hostfile/: hostinfo.txt
rdma/include/core/: Vertex.hpp
rdma/include/network/: RDMA.hpp  tcp.hpp
rdma/include/query/: PageRank.hpp  SingleSourceShortestPath.hpp  WeaklyConnectedComponent.hpp
rdma/include/tools/: ResourceChecker.hpp  ThreadPool.hpp
rdma/include/topology/: Topology.hpp
rdma/networkTest/src/network/: tcp.cpp
rdma/rdmaTest/: main.cpp
rdma/rdmaTest/src/network/: CMakeLists.txt  tcp.cpp
rdma/src/core/: CMakeLists.txt  Vertex.cpp
rdma/src/network/: CMakeLists.txt  RDMA.cpp  tcp.cpp
rdma/src/query/: CMakeLists.txt  PageRank.cpp  SingleSourceShortestPath.cpp  WeaklyConnectedComponent.cpp
rdma/src/tools/: CMakeLists.txt  ResourceChecker.cpp  ThreadPool.cpp  argparse.cpp
rdma/src/topology/: CMakeLists.txt  Topology.cpp
src/communication/: IPC.cpp  IPoIB.cpp  RDMA.cpp
src/io/: HDFS.cpp
src/modules/: Communication.cpp  Configuration.cpp  Coordination.cpp  Execution.cpp  Graph.cpp  IO.cpp  Network.cpp  Parsing.cpp  Propagation.cpp  Resource.cpp  Setting.cpp
src/struct/: Vertex.cpp
src/utils/: ArgParsing.cpp  ThreadPool.cpp  Tools.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
src/zk/: CMakeLists.txt  zkTools.cpp
src/zookeeper/: zkTools.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  core.24440  core.24552  core.24885  main.cpp  master
test/lib/: Makefile
(+46 files in other folders)
